feat: turbo repo build system (#15)
* WIP - setup

* feat: turbo repo build system

* fix: turbo build optimiztion issue

* fix: typecheck runs error

* fix: turbo build

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,17 +29,20 @@
     "*.d.ts"
   ],
   "scripts": {
-    "prepublish": "nr build",
-    "postinstall": "nr build",
-    "build": "nr clean && tsup",
+    "_ni": "ni",
+    "build": "tsup",
     "dev": "esno ./src/cli.ts -v",
-    "clean": "rimraf package-lock.json dist",
     "clean:nm": "rimraf node_modules",
+    "clean": "rimraf package-lock.json dist",
     "typecheck": "tsc --noEmit",
-    "test:cli": "ni && nr build && pnpm link . && npx grft -v && rm -r node_modules/{@grft,.bin/*grft*}"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ci": "CI=true vitest",
+    "test:coverage": "nr test --coverage",
+    "test:cli": "pnpm link . && npx grft -v && rm -r node_modules/{@grft,.bin/*grft*}"
   },
   "dependencies": {
-    "@grft/core": "file:../core",
+    "@grft/core": "workspace:*",
     "sade": "^1.8.1",
     "serialize-error": "^11.0.0"
   },
