--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,6 @@ jobs:
 
       - name: Test
         run: |
-          pnpm run test:ci
           pnpm run test:coverage
 
       - name: Coverage
@@ -117,5 +116,5 @@ jobs:
       - name: Install
         run: pnpm i
 
-      - name: Test Cli
+      - name: Test CLI
         run: pnpm run test:cli
