--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@8.6.2",
+  "packageManager": "pnpm@8.6.5",
   "description": "Generate readme file from template file",
   "license": "MIT",
   "sideEffects": true,
@@ -19,26 +19,21 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "prepublish": "nr all",
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "test": "turbo run test",
+    "test:ci": "turbo run test:ci",
+    "test:cli": "turbo run test:cli",
+    "test:watch": "turbo run test:watch",
+    "test:coverage": "turbo run test:coverage",
+    "typecheck": "turbo run typecheck",
     "format": "prettier --write --cache .",
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
-    "build": "pnpm -r --filter='./packages/**' run build",
-    "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" pnpm -r --parallel --filter='./packages/**' run dev",
-    "test": "vitest -r packages",
-    "test:ci": "CI=true nr test:run",
-    "test:cli": "pnpm -r --stream run test:cli",
-    "test:coverage": "nr test:run --coverage",
-    "test:coverage:preview": "nr test:ui --coverage",
-    "test:ui": "vitest -r packages --ui",
-    "test:run": "vitest run -r packages",
-    "typecheck": "pnpm -r --parallel --filter='./packages/**' run typecheck",
-    "markdown:lint": "markdown-link-check *.md .github/*.md packages/*/*.md ",
-    "publish": "pnpm -r publish --access public",
-    "release": "bumpp package.json packages/**/package.json --commit --push --tag",
-    "clean": "pnpm -r --parallel --filter='./packages/**' run clean && rimraf .eslintcache coverage",
-    "clean:nm": "pnpm -r --parallel --filter='./packages/**' run clean:nm && rimraf packages/node_modules node_modules",
-    "all": "nr clean && ni && nr typecheck && nr format && nr lint:fix && nr markdown:lint && nr test:coverage"
+    "markdown:lint": "markdown-link-check *.md .github/*.md packages/*/*.md",
+    "clean": "turbo run clean && rimraf .eslintcache coverage",
+    "setup": "turbo run clean:nm && rimraf node_modules && pnpm i",
+    "all": "turbo run all && nr format && nr lint:fix && nr markdown:lint"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
@@ -48,8 +43,9 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-v8": "^0.32.2",
-    "bumpp": "^9.1.1",
+    "@vitest/ui": "^0.32.2",
     "eslint": "^8.43.0",
+    "eslint-config-turbo": "^1.10.6",
     "eslint-define-config": "^1.21.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
@@ -62,6 +58,7 @@
     "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.8.1",
     "tsup": "^7.1.0",
+    "turbo": "^1.10.6",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
