--- a/package.json
+++ b/package.json
@@ -30,36 +30,38 @@
     "format": "prettier --write --cache .",
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
+    "deps:fresh": "taze -r -w && ni",
     "markdown:lint": "markdown-link-check *.md .github/*.md packages/*/*.md",
     "clean": "turbo run clean && rimraf .eslintcache coverage",
-    "setup": "turbo run clean:nm && rimraf node_modules && pnpm i",
+    "setup": "turbo run clean:nm && rimraf node_modules && pnpm i && nr deps:fresh",
     "all": "turbo run all && nr format && nr lint:fix && nr markdown:lint"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
-    "@types/node": "^20.3.2",
+    "@types/node": "^20.3.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-v8": "^0.32.2",
     "@vitest/ui": "^0.32.2",
-    "eslint": "^8.43.0",
-    "eslint-config-turbo": "^1.10.6",
+    "eslint": "^8.44.0",
+    "eslint-config-turbo": "^1.10.7",
     "eslint-define-config": "^1.21.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-regexp": "^1.15.0",
     "esno": "^0.16.3",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "markdown-link-check": "^3.11.2",
     "pnpm": "^8.6.5",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.8.1",
+    "taze": "^0.11.2",
     "tsup": "^7.1.0",
-    "turbo": "^1.10.6",
-    "typescript": "^5.1.3",
+    "turbo": "^1.10.7",
+    "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.2"
