refactor: optimize turbo build process (#22)
* refactor: optimize turbo build process

* fix: mega-lint issue for cspell and sh file

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,7 @@
 .github
 .vscode
 .npmrc
+.nvmrc
 .stackblitz
 .gitignore
 .editorconfig
@@ -11,6 +12,7 @@
 .turbo
 dist/
 temp/
+scripts/
 fixtures/
 coverage/
 node_modules/
