--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "bierner.markdown-emoji",
     "christian-kohler.npm-intellisense",
     "dbaeumer.vscode-eslint",
     "davidanson.vscode-markdownlint",
