--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,17 +32,16 @@
     "_ni": "ni",
     "build": "tsup",
     "dev": "esno ./src/cli.ts -v",
-    "clean:nm": "rimraf node_modules",
-    "clean": "rimraf package-lock.json dist",
+    "clean": "rimraf package-lock.json dist node_modules",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ci": "CI=true vitest",
     "test:coverage": "nr test --coverage",
-    "test:cli": "pnpm link . && npx grft -v && rm -r node_modules/{@grft,.bin/*grft*}"
+    "test:cli": "pnpm link . && pnpm grft -v"
   },
   "dependencies": {
-    "@grft/core": "workspace:*",
+    "@grft/core": "workspace:core",
     "sade": "^1.8.1",
     "serialize-error": "^11.0.0"
   },
