--- a/packages/cli/turbo.json
+++ b/packages/cli/turbo.json
@@ -4,18 +4,26 @@
     "build": {
       "dependsOn": ["^build"]
     },
+    "_ni": {
+      "dependsOn": ["build"]
+    },
+    "test": {
+      "dependsOn": ["_ni"]
+    },
     "test:ci": {
-      "dependsOn": ["build", "_ni"]
+      "dependsOn": ["_ni"]
     },
     "test:cli": {
-      "dependsOn": ["build", "_ni"]
+      "dependsOn": ["_ni"]
+    },
+    "test:watch": {
+      "dependsOn": ["_ni"]
     },
     "test:coverage": {
-      "dependsOn": ["build", "_ni"]
+      "dependsOn": ["_ni"]
     },
     "typecheck": {
-      "dependsOn": ["build", "_ni"]
-    },
-    "_ni": {}
+      "dependsOn": ["_ni"]
+    }
   }
 }
