--- a/packages/ui/turbo.json
+++ b/packages/ui/turbo.json
@@ -2,11 +2,12 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["_ni", "^build", "storybook:build"]
     },
     "storybook:preview": {
       "dependsOn": ["storybook:build"]
     },
-    "storybook:build": {}
+    "storybook:build": {},
+    "_ni": {}
   }
 }
