feat: codesandbox and codecov basic config (#23)
* feat: codesandbox and codecov basic config

* fix: json v8r exclude

* chore: modified regex pattern for json and yml v8r exclude

* chore: codesandbox task.json

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -19,7 +19,8 @@ env:
   HTML_HTMLHINT_FILTER_REGEX_EXCLUDE: storybook-static
   SPELL_CSPELL_FILTER_REGEX_EXCLUDE: storybook-static
   EDITORCONFIG_EDITORCONFIG_CHECKER_FILTER_REGEX_EXCLUDE: storybook-static
-  YAML_V8R_FILTER_REGEX_EXCLUDE: (pnpm-lock.yaml|pnpm-workspace.yaml|.github/mergify.yml|.github/ISSUE_TEMPLATE/config.yml|.github/ISSUE_TEMPLATE/bug_report.yml)
+  JSON_V8R_FILTER_REGEX_EXCLUDE: ^(\.\/)?([\w\-\.]+\/)*[\w\-\.]+\.json$
+  YAML_V8R_FILTER_REGEX_EXCLUDE: ^(\.\/)?([\w\-\.]+\/)*[\w\-\.]+\.ya?ml$
 
 
 concurrency:
