--- a/turbo.json
+++ b/turbo.json
@@ -33,7 +33,8 @@
     },
     "dev": {
       "cache": true,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["build"]
     }
   }
 }
