--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -1,11 +1,11 @@
 ---
-name: Setup and cache
-description: Setup for node, pnpm and cache for -
+name: GRFT node setup and cache
+description: Setup for node, pnpm and cache configuration
 inputs:
   node-version:
     required: false
     description: Node version for setup-node
-    default: 18.x
+    default: 16.x
 
 runs:
   using: composite
@@ -17,21 +17,23 @@ runs:
     - name: Set node version to ${{ inputs.node-version }}
       uses: actions/setup-node@v3
       with:
+        node-version-file: '.nvmrc'
         node-version: ${{ inputs.node-version }}
 
     - name: Resolve package versions
       id: resolve-package-versions
       shell: bash
-      run: >
+      run: |
         echo "$(
           node -e "
             # const fs = require('fs');
             # const lockfile = fs.readFileSync('./pnpm-lock.yaml', 'utf8');
-            # const pattern = (name) => new RegExp(name + ':\\\s+specifier: [\\\s\\\w\\\.^]+version: (\\\d+\\\.\\\d+\\\.\\\d+)');
+            # const pattern = (name) => new RegExp(name + ':\\s+specifier: [\\s\\w\\.\\^]+version: (\\d+\\.\\d+\\.\\d+)');
             # const cypressVersion = lockfile.match(pattern('cypress'))[1];
             # console.log('CYPRESS_VERSION=' + cypressVersion);
           "
-        )" >> $GITHUB_OUTPUT
+        )" >> "$GITHUB_OUTPUT"
+
 
     - name: Print versions
       shell: bash
