feat: gitpod config files added, docs: badge added (#26)
* feat: gitpod config files added, docs: badge added

* chore: gitpod workspace-full image tag changed

* chore: gitpod container HEALTHCHECK added

* chore: gitpod.Dockerfile NVM installation process changed

* fix: permission issue of /usr/local/nvm

* fix: gitpod docker file export NVM directory

* fix: gitpod docker node version order

* fix: gitpod docker bash login added

* fix: gitpod docker issue

* fix: typo pnpm install command - removed run args

* fix: trivy issue by removing root user from gitpod docker file, changed node version in nvmrc file

* fix: trivy issue by refactoring gitpod docker file code

* fix: trivy issue by skip-files args

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,9 +1,11 @@
-dist
-node_modules
 *.snap
 *.d.ts
+.turbo
+.dockerignore
+.gitpod.Dockerfile
+grft.code-workspace
+dist
+node_modules
 coverage
 output
 storybook-static
-.turbo
-grft.code-workspace
