--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,9 +4,11 @@
     "christian-kohler.npm-intellisense",
     "dbaeumer.vscode-eslint",
     "davidanson.vscode-markdownlint",
+    "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "folke.vscode-monorepo-workspace",
+    "redhat.vscode-yaml",
     "zixuanchen.vitest-explorer",
     "seatonjiang.gitmoji-vscode",
     "streetsidesoftware.code-spell-checker"
