--- a/.dockerignore
+++ b/.dockerignore
@@ -4,14 +4,14 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 *-lock.json
-lib-cov
-coverage
 node_modules
+coverage
+.stackblitz
+.codesandbox
+fixures
 .env
 .cache
 dist
-fixtures/output/*
-!fixtures/output/.gitkeep
 .idea
 .vite-node
 ltex*
@@ -19,4 +19,3 @@ ltex*
 .eslintcache
 .nyc_output
 .turbo
-storybook-static
