--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -13,7 +13,7 @@ env:
   JAVASCRIPT_DEFAULT_STYLE: prettier
   TYPESCRIPT_DEFAULT_STYLE: prettier
   SPELL_CSPELL_ARGUMENTS: --root /
-  REPOSITORY_TRIVY_ARGUMENTS: --skip-dirs node_modules
+  REPOSITORY_TRIVY_ARGUMENTS: --skip-dirs node_modules --skip-files ".gitpod.Dockerfile"
   REPOSITORY_CHECKOV_ARGUMENTS: -d . --skip-check CKV2_GHA_1
   HTML_DJLINT_FILTER_REGEX_EXCLUDE: storybook-static
   HTML_HTMLHINT_FILTER_REGEX_EXCLUDE: storybook-static
