fix: code coverage not showing proper results (#35)
* feat: codecov config changed

* ci: fix codecov github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,12 +86,9 @@ jobs:
         run: |
           pnpm run test:coverage
 
-      - name: Coverage
-        if: always()
-        uses: davelosert/vitest-coverage-report-action@v2
-
-      - name: Upload coverage reports to Codecov
+      - name: Codecov
         uses: codecov/codecov-action@v3
+        if: matrix.os == 'ubuntu-latest' && matrix.node_version == 18
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
