fix: Issue#20 code coverage not showing proper results (#37)
* feat: codecov config changed

* ci: fix codecov github actions

* fix: coverage now be accessable for all packages

* fix: coverage reportsDirectory pointed to root

* chore: conflict resolved

* chore: fixed test failure issue, drop turbo support, refactor package script, modified shell scripting

* feat: github action job needs props added

* fix: shell issues

* fix: typecheck issue

* fix: github actions typecheck by adding core build process

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,6 +12,7 @@ vscode:
     - "editorconfig.editorconfig"
     - "esbenp.prettier-vscode"
     - "folke.vscode-monorepo-workspace"
+    - "foxundermoon.shell-format"
     - "zixuanchen.vitest-explorer"
     - "seatonjiang.gitmoji-vscode"
     - "streetsidesoftware.code-spell-checker"
