--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "folke.vscode-monorepo-workspace",
+    "foxundermoon.shell-format",
     "redhat.vscode-yaml",
     "zixuanchen.vitest-explorer",
     "seatonjiang.gitmoji-vscode",
