--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grft",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "private": true,
   "packageManager": "pnpm@8.6.6",
   "description": "Generate readme file from template file",
@@ -17,26 +17,30 @@
   },
   "repository": "rjoydip/grft",
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16",
+    "npm": ">=8",
+    "shell": "bash"
   },
   "scripts": {
+    "prebuild": "ni",
+    "pretest": "nr build",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "dev": "turbo run dev",
-    "build": "turbo run build",
-    "test": "turbo run test",
-    "test:ci": "turbo run test:ci",
-    "test:cli": "turbo run test:cli",
-    "test:watch": "turbo run test:watch",
-    "test:coverage": "turbo run test:coverage",
-    "typecheck": "turbo run typecheck",
-    "format": "prettier --write --cache .",
     "lint": "eslint --cache .",
     "lint:fix": "nr lint --fix",
     "deps:fresh": "taze -r -w -i",
+    "format": "prettier --write --cache .",
+    "build": "pnpm -r --filter='./packages/**' run build",
+    "dev": "pnpm -r --filter='./packages/**' run dev",
+    "test": "vitest run -r packages",
+    "test:ci": "nr build && CI=true nr test",
+    "test:watch": "nr build && nr test --watch",
+    "typecheck": "pnpm -r --filter='./packages/**' run typecheck",
+    "test:cli": "nr build && ni && pnpm -r --filter='./packages/cli' run test:cli",
     "markdown:lint": "markdown-link-check *.md .github/*.md packages/*/*.md",
-    "clean": "turbo run clean && rimraf .eslintcache coverage && scripts/delete-root-nm.sh",
-    "all": "turbo run all && nr format && nr lint:fix && nr markdown:lint && nr deps:fresh"
+    "clean": "./scripts/commander.sh --clean",
+    "clean:nm": "./scripts/commander.sh --clean-nm",
+    "all": "nr clean && nr deps:fresh && nr format && nr lint:fix && nr markdown:lint && nr test:ci && nr test:cli && nr typecheck"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
@@ -62,7 +66,6 @@
     "simple-git-hooks": "^2.8.1",
     "taze": "^0.11.2",
     "tsup": "^7.1.0",
-    "turbo": "^1.10.7",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0",
