--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - uses: ./.github/actions/setup-node
-
       - name: Install
         run: pnpm i
-
       - name: Lint
         run: pnpm run lint
-
       - name: Markdown Lint
         run: pnpm run markdown:lint
 
@@ -31,36 +27,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - uses: ./.github/actions/setup-node
-
       - name: Install
         run: pnpm i
-
       - name: Build
         run: pnpm run build
 
   typecheck:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v3
-
       - uses: ./.github/actions/setup-node
-
       - name: Install
         run: pnpm i
-
       - name: Typecheck
         run: pnpm run typecheck
 
   test:
     runs-on: ${{ matrix.os }}
-
+    needs: build
     permissions:
       pull-requests: write
-
     timeout-minutes: 30
-
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -74,18 +63,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
       - uses: ./.github/actions/setup-node
         with:
           node-version: ${{ matrix.node_version }}
-
       - name: Install
         run: pnpm i
-
       - name: Test
         run: |
-          pnpm run test:coverage
-
+          pnpm run test:ci
       - name: Codecov
         uses: codecov/codecov-action@v3
         if: matrix.os == 'ubuntu-latest' && matrix.node_version == 18
@@ -94,24 +79,19 @@ jobs:
 
   test_cli:
     runs-on: ${{ matrix.os }}
-
+    needs: build
     timeout-minutes: 30
-
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node_version: [16, 18]
       fail-fast: false
-
     steps:
       - uses: actions/checkout@v3
-
       - uses: ./.github/actions/setup-node
         with:
           node-version: ${{ matrix.node_version }}
-
       - name: Install
         run: pnpm i
-
       - name: Test CLI
         run: pnpm run test:cli
