--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,24 +33,19 @@
     "*.d.ts"
   ],
   "scripts": {
-    "_ni": "ni",
     "build": "tsup",
     "dev": "esno ./src/index.ts -v",
-    "clean": "rimraf package-lock.json dist node_modules",
-    "typecheck": "tsc --noEmit",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:ci": "CI=true vitest",
-    "test:coverage": "nr test --coverage",
-    "test:cli": "pnpm link . && pnpm grft -v"
+    "test:cli": "pnpm link . && pnpm grft -v",
+    "build:core": "pnpm --filter core run build",
+    "typecheck": "nr build:core && ni && nr build && tsc --noEmit"
   },
   "dependencies": {
     "@grft/core": "workspace:*",
-    "read-pkg-up": "^9.1.0",
     "sade": "^1.8.1",
     "serialize-error": "^11.0.0"
   },
   "devDependencies": {
-    "execa": "^7.1.1"
+    "execa": "^7.1.1",
+    "find-monorepo-root": "^1.0.3"
   }
 }
