--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.6.6",
+  "packageManager": "pnpm@8.6.7",
   "description": "Generate readme file from template file",
   "license": "MIT",
   "sideEffects": true,
@@ -35,18 +35,17 @@
     "test": "vitest run -r packages",
     "test:ci": "nr build && CI=true nr test",
     "test:watch": "nr build && nr test --watch",
-    "typecheck": "pnpm -r --filter='./packages/**' run typecheck",
     "test:cli": "nr build && ni && pnpm -r --filter='./packages/cli' run test:cli",
     "markdown:lint": "markdown-link-check *.md .github/*.md packages/*/*.md",
     "clean": "./scripts/commander.sh --clean",
     "clean:nm": "./scripts/commander.sh --clean-nm",
-    "all": "nr clean && nr deps:fresh && nr format && nr lint:fix && nr markdown:lint && nr test:ci && nr test:cli && nr typecheck"
+    "all": "nr clean && nr deps:fresh && nr format && nr lint:fix && nr markdown:lint && nr test:ci && nr test:cli"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.4",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
-    "@types/node": "^20.3.3",
+    "@types/node": "^20.4.1",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitest/coverage-v8": "^0.33.0",
@@ -60,14 +59,14 @@
     "esno": "^0.16.3",
     "lint-staged": "^13.2.3",
     "markdown-link-check": "^3.11.2",
-    "pnpm": "^8.6.6",
+    "pnpm": "^8.6.7",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.8.1",
     "taze": "^0.11.2",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
+    "vite": "^4.4.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.4"
   },
