--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig/tsconfig.node.json",
   "compilerOptions": {
     "paths": {
       "@grft/cli": ["./src/index.ts"]
     }
-  }
+  },
+  "exclude": ["dist", "*.d.ts"]
 }
