--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,20 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./*": "./*"
+  },
+  "files": [
+    "dist",
+    "*.d.ts"
+  ],
   "scripts": {
     "build": "tsup",
     "storybook": "storybook dev -p 6006",
