--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
 
       - name: Setup Node.js 16
         uses: actions/setup-node@v3
