chore: project name changed (#52)
* chore: preject name changed

* fix: the spell for cli module

--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -1,5 +1,5 @@
 ---
-name: GRFT node setup and cache
+name: GFFT node setup and cache
 description: Setup for node, pnpm and cache configuration
 inputs:
   node-version:
