--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 ---
 name: 🐞 Bug report
-description: Report an issue with grft
+description: Report an issue with gfft
 labels: [pending triage]
 body:
   - type: markdown
@@ -19,7 +19,7 @@ body:
     id: reproduction
     attributes:
       label: Reproduction
-      description: Please provide a link to [StackBlitz](https://stackblitz.com/fork/github/rjoydip/grft) or a github repo that can reproduce the problem you ran into. A is required unless you are absolutely sure that the issue is obvious and the provided information is enough to understand the problem. If a report is vague (e.g. just a generic error message) and has no reproduction, it will receive a "need reproduction" label. If no reproduction is provided after 3 days, it will be auto-closed.
+      description: Please provide a link to [StackBlitz](https://stackblitz.com/fork/github/rjoydip/gfft) or a github repo that can reproduce the problem you ran into. A is required unless you are absolutely sure that the issue is obvious and the provided information is enough to understand the problem. If a report is vague (e.g. just a generic error message) and has no reproduction, it will receive a "need reproduction" label. If no reproduction is provided after 3 days, it will be auto-closed.
       placeholder: Reproduction
     validations:
       required: true
@@ -27,8 +27,8 @@ body:
     id: system-info
     attributes:
       label: System Info
-      description: Output of `npx envinfo --system --npmPackages '{grft,@grft/*,vite,@vitejs/*}' --binaries --browsers`
-      render: shell
+      description: Output of `npx envinfo --system --npmPackages '{gfft,@gfft/*,vite,@vitejs/*}' --binaries --browsers`
+      render: shell-script
       placeholder: System, Binaries, Browsers
     validations:
       required: true
@@ -49,11 +49,11 @@ body:
       label: Validations
       description: Before submitting the issue, please make sure you do the following
       options:
-        - label: Follow our [Code of Conduct](https://github.com/rjoydip/grft/blob/main/CODE_OF_CONDUCT.md)
+        - label: Follow our [Code of Conduct](https://github.com/rjoydip/gfft/blob/main/CODE_OF_CONDUCT.md)
           required: true
-        - label: Check that there isn't [already an issue](https://github.com/rjoydip/grft/issues) that reports the same bug to avoid creating a duplicate.
+        - label: Check that there isn't [already an issue](https://github.com/rjoydip/gfft/issues) that reports the same bug to avoid creating a duplicate.
           required: true
-        - label: Check that this is a concrete bug. For Q&A open a [GitHub Discussion](https://github.com/rjoydip/grft/discussions).
+        - label: Check that this is a concrete bug. For Q&A open a [GitHub Discussion](https://github.com/rjoydip/gfft/discussions).
           required: true
         - label: The provided reproduction is a [minimal reproducible example](https://stackoverflow.com/help/minimal-reproducible-example) of the bug.
           required: true
