--- a/.github/workflows/lock-closed-issues.yml
+++ b/.github/workflows/lock-closed-issues.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   action:
-    if: github.repository == 'rjoydip/grft'
+    if: github.repository == 'rjoydip/gfft'
     runs-on: ubuntu-latest
     steps:
       - uses: dessant/lock-threads@v4
@@ -20,6 +20,6 @@ jobs:
           # issue-comment: |
           #  This issue has been locked since it has been closed for more than 14 days.
           #
-          #  If you have found a concrete bug or regression related to it, please open a new [bug report](https://github.com/rjoydip/grft/issues/new/choose) with a reproduction against the latest Grft version. If you have any other comments you should create a new [discussion](https://github.com/rjoydip/grft/discussions).
+          #  If you have found a concrete bug or regression related to it, please open a new [bug report](https://github.com/rjoydip/gfft/issues/new/choose) with a reproduction against the latest GFFT version. If you have any other comments you should create a new [discussion](https://github.com/rjoydip/gfft/discussions).
           issue-lock-reason: ""
           process-only: issues
