--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@grft/cli",
+  "name": "@gfft/cli",
   "type": "module",
   "version": "0.1.0",
-  "cliname": "GRFT",
-  "description": "Grft cli service",
+  "cliname": "GFFT",
+  "description": "GFFT cli service",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/grft/tree/main/packages/cli#readme",
+  "homepage": "https://github.com/rjoydip/gfft/tree/main/packages/cli#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rjoydip/grft.git",
+    "url": "git+https://github.com/rjoydip/gfft.git",
     "directory": "packages/cli"
   },
   "bugs": {
-    "url": "https://github.com/rjoydip/grft/issues"
+    "url": "https://github.com/rjoydip/gfft/issues"
   },
   "sideEffects": true,
   "main": "./dist/index.js",
@@ -26,21 +26,21 @@
     "./*": "./*"
   },
   "bin": {
-    "grft": "grft.mjs"
+    "gfft": "gfft.mjs"
   },
   "files": [
-    "grft.mjs",
+    "gfft.mjs",
     "*.d.ts",
     "dist"
   ],
   "scripts": {
     "build": "tsup",
     "dev": "esno ./src/index.ts -v",
-    "test:cli": "pnpm link . && pnpm grft -v",
+    "test:cli": "pnpm link . && pnpm gfft -v",
     "build:core": "pnpm --filter core run build"
   },
   "dependencies": {
-    "@grft/core": "workspace:*",
+    "@gfft/core": "workspace:*",
     "sade": "^1.8.1",
     "serialize-error": "^11.0.0"
   },
