feat: devcontainer support (#32)
* chore: basic setup file added

* fix: megalint issue for devcontainer setup

* fix: megalint issue fixing - 1

* chore: gitpod docker file modified

* chore: devcontainer docker change for megalint issue fix

* chore: devcontainer docker change for megalint issue fix

* fix: trivy devcontainer Dockerfile hadolint issue

* fix: gitpod dockerfile

* chore: npm pkg update

* chore: node URL link on 16 LTS version

* chore: modified devcontainer Dockefile

* chore: skip-files .devcontainer/Dockerfile

* feat: dev container completed

* chore: markdown lint refactor, cleaner refactor

* fix: structural issue and refactor scripts cleaner

* fix: megalint for jscpd and markdown linting

* fix: megalint for jscpd and markdown linting - 2

* fix: megalint for jscpd and markdown linting - after format

* chore: git add cmd added on each lint-stage steps

* ci: drop megalint check

* fix: rename .commitlintrc.json for gh ci pr-title-lint

* ci: pnpm installation for gh workflows pr-title-lint

* chore: removed pr title check seperate job and included in ci

* ci: optimize and added new actions

--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -5,6 +5,6 @@
 addReviewers: false
 
 # Set to true to add assignees to pull requests
-addAssignees: author
+addAssignees: true
 
 runOnDraft: true
