--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "[markdown]": {
     "editor.formatOnSave": false
   },
-  "prettier.enable": false
+  "prettier.enable": false,
+  "json.validate.enable": false
 }
