--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Lint
         run: pnpm run lint
       - name: Markdown Lint
-        run: pnpm run markdown:lint
+        run: pnpm run lint:md
 
   build:
     runs-on: ubuntu-latest
