--- a/.release-it.json
+++ b/.release-it.json
@@ -32,7 +32,7 @@
       "pnpm run deps:fresh",
       "pnpm run format",
       "pnpm run lint",
-      "pnpm run markdown:lint",
+      "pnpm run lint:md",
       "pnpm run test:ci",
       "pnpm run test:cli"
     ]
