--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "folke.vscode-monorepo-workspace",
+    "ms-vscode-remote.remote-containers",
     "foxundermoon.shell-format",
     "redhat.vscode-yaml",
     "zixuanchen.vitest-explorer",
