ci: snyk security, trivy-scan, auto-approve-action (#54)
* ci: added snyk security

* fix: changed synk security process

* fix: pkg name and cspell check added

* ci: --all-projects in synk security process

* ci: trivy-scan added

* ci: contents permissions added for trivy-scan output file

* ci: added sonar cloud

* ci: sonar properties file removed and added in ci.yml

* ci: modified args of sonar scan

* ci: drop sonar cloud integration

* chore: drop actions-cool pkg from application because it's not working as expected

* feat: size-limit added, it will execute after test:ci process

* chore: added auto-approve-action in github ci, new vscode extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,6 +10,7 @@
     "folke.vscode-monorepo-workspace",
     "ms-vscode-remote.remote-containers",
     "foxundermoon.shell-format",
+    "folke.vscode-monorepo-workspace",
     "redhat.vscode-yaml",
     "zixuanchen.vitest-explorer",
     "seatonjiang.gitmoji-vscode",
