--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -27,7 +27,7 @@ body:
     id: system-info
     attributes:
       label: System Info
-      description: Output of `npx envinfo --system --npmPackages '{gfft,@gfft/*,vite,@vitejs/*}' --binaries --browsers`
+      description: Output of `npx envinfo --system --binaries --browsers`
       render: shell-script
       placeholder: System, Binaries, Browsers
     validations:
