--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ concurrency:
   group: ci-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: write
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -22,6 +25,8 @@ jobs:
         run: pnpm run lint
       - name: Markdown Lint
         run: pnpm run lint:md
+      - name: Spell Lint
+        run: pnpm run lint:spell
 
   build:
     runs-on: ubuntu-latest
@@ -34,27 +39,11 @@ jobs:
         run: pnpm run build
 
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: build
-    permissions:
-      pull-requests: write
-    timeout-minutes: 30
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node_version: [16, 18]
-        include:
-          - os: macos-latest
-            node_version: 18
-          - os: windows-latest
-            node_version: 18
-      fail-fast: false
-
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
-        with:
-          node-version: ${{ matrix.node_version }}
       - name: Install
         run: pnpm i
       - name: Test
@@ -62,14 +51,13 @@ jobs:
           pnpm run test:ci
       - name: Codecov
         uses: codecov/codecov-action@v3
-        if: matrix.os == 'ubuntu-latest' && matrix.node_version == 18
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   test_cli:
     runs-on: ${{ matrix.os }}
     needs: build
-    timeout-minutes: 30
+    timeout-minutes: 10
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -84,3 +72,31 @@ jobs:
         run: pnpm i
       - name: Test CLI
         run: pnpm run test:cli
+
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: ./.github/actions/setup-node
+      - name: Install
+        run: pnpm i
+      - name: Snyk monitor
+        run: npx snyk monitor --all-projects
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+  trivy-scan:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@master
+    - name: Run Trivy vulnerability scanner in fs mode
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: '.'
+        scan-type: 'fs'
+        scan-ref: '.'
+        trivy-config: trivy.yaml
+        format: 'github'
+        output: 'dependency-results.sbom.json'
+        github-pat: ${{ secrets.GITHUB_TOKEN }}
