--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  test_cli:
+  test-cli:
     runs-on: ${{ matrix.os }}
     needs: build
     timeout-minutes: 10
@@ -72,6 +72,18 @@ jobs:
         run: pnpm i
       - name: Test CLI
         run: pnpm run test:cli
+
+  test-storybook:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    needs: ["build"]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
+      - name: Install
+        run: pnpm i
+      - name: Serve Storybook and run tests
+        run: pnpm test:storybook
 
   security:
     runs-on: ubuntu-latest
