--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.6.7",
+  "packageManager": "pnpm@8.6.9",
   "description": "Generate file from template file",
   "license": "MIT",
   "sideEffects": true,
@@ -32,32 +32,35 @@
     "deps:fresh": "taze -r -w -i",
     "format": "prettier --write --cache .",
     "build": "pnpm -r --filter='./packages/**' run build",
+    "build:storybook": "pnpm run -C './packages/ui' storybook:build",
     "dev": "pnpm -r --filter='./packages/**' run dev",
     "test": "vitest run -r packages",
     "test:ci": "nr build && CI=true nr test && size-limit",
     "test:watch": "nr build && nr test --watch",
-    "test:cli": "nr build && ni && pnpm -r --filter='./packages/cli' run test:cli",
+    "test:cli": "nr build && ni && pnpm run -C './packages/cli' test:cli",
+    "test:storybook": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpm run -C ./packages/ui preview:storybook\" \"npx wait-on tcp:6006 && pnpm run -C ./packages/ui test:storybook\"",
     "lint:md": "node scripts/markdownlint.js $(glob '{*.md,{.github,packages,fixtures}/**/*.md}' -i '**/node_modules/**')",
     "clean": "node scripts/commander.js clean",
-    "clean:nm": "node scripts/commander.js clean -nm",
-    "all": "nr clean && nr deps:fresh && nr format && nr lint && nr lint:md && nr lint:spell && nr test:ci && nr test:cli"
+    "clean:nm": "node scripts/commander.js clean --nm",
+    "all": "nr clean && nr deps:fresh && nr format && nr lint && nr lint:md && nr test:ci && nr test:cli && nr test:storybook"
   },
   "devDependencies": {
-    "@antfu/ni": "^0.21.4",
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
+    "@antfu/ni": "^0.21.5",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@release-it/bumper": "^5.0.0",
     "@release-it/conventional-changelog": "^7.0.0",
     "@size-limit/file": "^8.2.6",
-    "@types/node": "^20.4.1",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/node": "^20.4.2",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
-    "cspell": "^6.31.1",
+    "concurrently": "^8.2.0",
+    "cspell": "^6.31.2",
     "envinfo": "^7.10.0",
-    "eslint": "^8.44.0",
-    "eslint-config-turbo": "^1.10.7",
+    "eslint": "^8.45.0",
+    "eslint-config-turbo": "^1.10.8",
     "eslint-define-config": "^1.21.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
@@ -68,9 +71,9 @@
     "lint-staged": "^13.2.3",
     "markdownlint": "^0.29.0",
     "ora": "^6.3.1",
-    "pnpm": "^8.6.7",
+    "pnpm": "^8.6.9",
     "prettier": "^3.0.0",
-    "release-it": "^16.1.0",
+    "release-it": "^16.1.2",
     "rimraf": "^5.0.1",
     "sade": "^1.8.1",
     "serialize-error": "^11.0.0",
@@ -80,9 +83,9 @@
     "taze": "^0.11.2",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6",
-    "vite": "^4.4.3",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "wait-on": "^7.0.1"
   },
   "simple-git-hooks": {
     "commit-msg": "echo $(cat .git/COMMIT_EDITMSG) | npx commitlint",
@@ -90,16 +93,13 @@
   },
   "lint-staged": {
     "*": [
-      "nr format",
-      "git add ."
+      "nr format"
     ],
     "packages/**/*.{js,ts,jsx,tsx,json}": [
-      "nr lint",
-      "git add ."
+      "nr lint"
     ],
     "*.{md,mdx}": [
-      "nr lint:md",
-      "git add ."
+      "nr lint:md"
     ]
   },
   "size-limit": [
