chore: fix auto-approve and added lint:secret (#72)
* ci: auto-approve dependabot

* chore: fix auto-approve and added lint:secret

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
         run: pnpm run lint:md
       - name: Spell Lint
         run: pnpm run lint:spell
+      - name: Secret Lint
+        run: pnpm run lint:secret
 
   build:
     runs-on: ubuntu-latest
