--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,11 +16,13 @@ jobs:
 
   add-reviews:
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     steps:
       - uses: kentaro-m/auto-assign-action@v1.2.4
 
   pr-title:
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -37,3 +39,4 @@ jobs:
       - uses: hmarr/auto-approve-action@v3
         with:
           review-message: "Auto approved automated PR"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
