--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,19 +16,24 @@ permissions:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - name: Install
         run: pnpm i
-      - name: Lint
+      - name: ESlint
         run: pnpm run lint
-      - name: Markdown Lint
+      - name: Markdown
         run: pnpm run lint:md
-      - name: Spell Lint
+      - name: Spell
         run: pnpm run lint:spell
-      - name: Secret Lint
+      - name: Secret
         run: pnpm run lint:secret
+      - name: Size Limit
+        run: |
+          pnpm run build
+          pnpm run lint:size-limit
 
   build:
     runs-on: ubuntu-latest
@@ -42,7 +47,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -58,7 +63,7 @@ jobs:
 
   test-cli:
     runs-on: ${{ matrix.os }}
-    needs: build
+    needs: [build]
     timeout-minutes: 10
     strategy:
       matrix:
@@ -85,7 +90,7 @@ jobs:
       - name: Install
         run: pnpm i
       - name: Serve Storybook and run tests
-        run: pnpm test:storybook
+        run: pnpm run test:storybook
 
   security:
     runs-on: ubuntu-latest
