--- a/package.json
+++ b/package.json
@@ -22,28 +22,29 @@
     "shell": "bash"
   },
   "scripts": {
-    "prebuild": "ni",
     "pretest": "nr build",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "release": "release-it --ci",
-    "lint": "eslint --cache --fix .",
-    "lint:spell": "cspell .",
-    "lint:secret": "secretlint \"**/*\"",
-    "deps:fresh": "taze -r -w -i",
-    "format": "prettier --write --cache .",
-    "build": "pnpm -r --filter='./packages/**' run build",
-    "build:storybook": "pnpm run -C './packages/ui' storybook:build",
-    "dev": "pnpm -r --filter='./packages/**' run dev",
-    "test": "vitest run -r packages",
-    "test:ci": "nr build && CI=true nr test && size-limit",
-    "test:watch": "nr build && nr test --watch",
-    "test:cli": "nr build && ni && pnpm run -C './packages/cli' test:cli",
-    "test:storybook": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpm run -C ./packages/ui preview:storybook\" \"npx wait-on tcp:6006 && pnpm run -C ./packages/ui test:storybook\"",
-    "lint:md": "node scripts/markdownlint.js $(glob '{*.md,{.github,packages,fixtures}/**/*.md}' -i '**/node_modules/**')",
+    "changelog": "npx auto-changelog",
     "clean": "node scripts/commander.js clean",
     "clean:nm": "node scripts/commander.js clean --nm",
-    "all": "nr clean && nr deps:fresh && nr format && nr lint && lint:spell && nr lint:secret && nr lint:md && nr test:ci && nr test:cli && nr test:storybook"
+    "build": "pnpm -r --filter='./packages/**' run build",
+    "build:storybook": "pnpm run -C './packages/ui' storybook:build",
+    "deps:fresh": "taze -r -w -i",
+    "dev": "pnpm -r --filter='./packages/**' run dev",
+    "format": "prettier --write --cache .",
+    "lint": "eslint --cache --fix .",
+    "lint:spell": "cspell .",
+    "lint:size-limit": "size-limit",
+    "lint:secret": "secretlint \"**/*\"",
+    "lint:md": "node scripts/markdownlint.js $(glob '{*.md,{.github,packages,fixtures}/**/*.md}' -i '**/node_modules/**')",
+    "release": "release-it --ci",
+    "test": "vitest run -r packages",
+    "test:ci": "nr build && CI=true nr test",
+    "test:watch": "nr build && nr test --watch",
+    "test:cli": "nr build && pnpm run -C './packages/cli' test:cli",
+    "test:storybook": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpm run -C ./packages/ui preview:storybook\" \"npx wait-on tcp:6006 && pnpm run -C ./packages/ui test:storybook\"",
+    "all": "nr clean && nr deps:fresh && nr format && nr lint && nr lint:spell && nr lint:secret && nr lint:md && nr test:ci && nr test:cli && nr lint:size-limit && nr test:storybook"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.5",
@@ -58,11 +59,11 @@
     "@typescript-eslint/parser": "^6.1.0",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
+    "auto-changelog": "^2.4.0",
     "concurrently": "^8.2.0",
     "cspell": "^6.31.2",
     "envinfo": "^7.10.0",
     "eslint": "^8.45.0",
-    "eslint-config-turbo": "^1.10.8",
     "eslint-define-config": "^1.21.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
@@ -70,7 +71,6 @@
     "esno": "^0.16.3",
     "execa": "^7.1.1",
     "glob": "^10.3.3",
-    "lint-staged": "^13.2.3",
     "markdownlint": "^0.29.0",
     "ora": "^6.3.1",
     "pnpm": "^8.6.9",
@@ -82,7 +82,6 @@
     "serialize-error": "^11.0.0",
     "simple-git-hooks": "^2.8.1",
     "size-limit": "^8.2.6",
-    "synk": "^0.0.2",
     "taze": "^0.11.2",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6",
@@ -91,19 +90,7 @@
     "wait-on": "^7.0.1"
   },
   "simple-git-hooks": {
-    "commit-msg": "echo $(cat .git/COMMIT_EDITMSG) | npx commitlint",
-    "pre-commit": "pnpm exec lint-staged --concurrent true"
-  },
-  "lint-staged": {
-    "*": [
-      "nr format"
-    ],
-    "packages/**/*.{js,ts,jsx,tsx,json}": [
-      "nr lint"
-    ],
-    "*.{md,mdx}": [
-      "nr lint:md"
-    ]
+    "pre-commit": "pnpm run all"
   },
   "size-limit": [
     {
@@ -119,6 +106,12 @@
       "limit": "500B"
     }
   ],
+  "auto-changelog": {
+    "output": "CHANGELOG.md",
+    "template": "keepachangelog",
+    "unreleased": true,
+    "commitLimit": false
+  },
   "stackblitz": {
     "startCommand": "nr dev"
   }
